--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Monoton&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Monoton&family=Sriracha&display=swap');
 
 *{
-    font-family: arial;;
+    font-family: arial;
     box-sizing: border-box;
 }
 
@@ -28,7 +30,9 @@ body{
 }
 
 .logo h1{
-    font-family: cursive;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Monoton', sans-serif;
+    font-size: xx-large;
 }
 
 .menu{
@@ -64,23 +68,94 @@ body{
     background-color: #26332C;
 }
 
-.header{
-   
-    height: 600px;
+.chamativo{
+    height: 500px;
     display: flex;
     flex-flow: row wrap;
+    margin: 1% 2%;
+    background-color: #f7f7f7;
+    /* justify-content: center;
+    align-items: center; */
 }
 
-.chamativo{
-    margin-left: 10px;
+.bloco1{
     flex: 40%;
     /* border: solid 1px black; */
 }
 
-.img{
-    margin-right: 10px;
+.bloco1 h2{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.marca{
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Monoton', sans-serif;
+    font-size: 100px;
+}
+
+
+.bloco1 p{
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Monoton', sans-serif;
+    font-family: 'Sriracha', cursive;
+    padding-top: 0% ;
+    margin: 0% 2% 1% 2%;
+}
+
+.contact{
+    color: white;
+    background-color: #c74f35;
+    display: inline-block;
+    text-decoration: none;
+    text-align: left;
+    border-radius: 10px;
+    text-transform: uppercase;
+    margin-left: 2%;
+    padding: 15px;
+}
+
+.bloco1 a:hover{
+    border: none;
+    color: white;
+    background-color: #26332C
+}
+
+
+.bloco2{
     flex: 40%;
     /* border: solid 1px black; */
     text-align: center;
-    margin-top: 20px;
 }
+
+.tam{
+    /* border: solid black; */
+    height: 400px;
+    width: 780px;
+}
+
+.produtos{
+    background-color: #4f5f44;
+    color: white;
+    border: solid black 1px;
+    margin: 0% 2% 20%  2% ; 
+}
+
+.produtos h2{
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Monoton', sans-serif;
+    font-family: 'Sriracha', cursive;
+    font-size: xx-large;
+}
+
+
+.card{
+    display: inline-block;
+    margin: 1%;
+    width: 30%;
+    padding: 10%;
+    border: 1px solid white;
+}
+
