--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body{
    height: 100px;
    justify-content: center;
    align-items: center;
+   position: fixed;
+   width: 100%;
+   margin-bottom: 2%;
 }
 
 .logo{
@@ -54,7 +57,7 @@ body{
     border-top: 4px solid #6b0700;
 }
 
-#botao{
+#entrar{
     background-color: #c74f35;
     padding: 10px 25px;
     border-radius: 8%;
@@ -62,7 +65,7 @@ body{
     margin-left: 5%;
 }
 
-#botao:hover{
+#entrar:hover{
     border: none;
     color: #f7f7f7;
     background-color: #26332C;
@@ -73,7 +76,9 @@ body{
     height: 500px;
     display: flex;
     flex-flow: row wrap;
-    margin: 1% 2% 0% 2%;
+    /* border: #6b0700 solid 1px; */
+    padding-top: 100px;
+    /* margin: 2% 0% 0% 0%; */
     background-color: #f7f7f7;
     /* justify-content: center;
     align-items: center; */
@@ -81,6 +86,8 @@ body{
 
 .bloco1{
     flex: 40%;
+   
+    /* align-items: center; */
     /* border: solid 1px black; */
 }
 
@@ -94,6 +101,7 @@ body{
     font-family: 'Dancing Script', cursive;
     font-family: 'Monoton', sans-serif;
     font-size: 100px;
+    /* border: solid 1px black; */
 }
 
 
@@ -105,7 +113,7 @@ body{
     margin: 0% 2% 1% 2%;
 }
 
-.contact{
+.fale-conosco{
     color: #f7f7f7;
     background-color: #c74f35;
     display: inline-block;
@@ -128,6 +136,7 @@ body{
     flex: 40%;
     /* border: solid 1px black; */
     text-align: center;
+    /* height: auto; */
 }
 
 .tam{
@@ -139,8 +148,10 @@ body{
 .produtos{
     background-color: #4f5f44;
     color: #f7f7f7;
-    /* border: solid black 1px; */
-    margin: 0% 2% 20%  2% ; 
+    border: solid #4f5f44 5px;
+    margin-top: 1%;
+    padding: 0%;
+    /* margin: 2% 0% 0%  0% ; */
 }
 
 #fixo{
@@ -160,7 +171,7 @@ body{
     display: inline-block;
     align-items: center;
     text-align: center;
-    margin: 1%;
+    margin: 1% 1% 1% 2%;
     width: 30%;
     padding: 5%;
     border-radius: 10%;
@@ -175,9 +186,12 @@ body{
 
 footer{
     color: #f7f7f7;
-    background-color: #6B0700;
-    border: solid black 1px;
-    margin-top: 1px;
+    background-image: linear-gradient(180deg, #6b0700,  #380E0B);
+    border: solid #f7f7f7 1px;
+    /* margin-top: 2%; */
     height: 300px;
+}
 
+footer h1,p {
+    margin-left: 2%;
 }
