--- a/style.css
+++ b/style.css
@@ -185,8 +185,8 @@ body{
 }
 
 footer{
-    color: #f7f7f7;
-    background-image: linear-gradient(180deg, #6b0700,  #380E0B);
+    color: #4f5f44;
+    background-color: #f7f7f7;
     border: solid #f7f7f7 1px;
     /* margin-top: 2%; */
     height: 300px;
@@ -195,4 +195,10 @@ footer{
 
 footer h1,p {
     margin-left: 2%;
+}
+
+
+footer h3{
+    text-align: center;
+    border: white solid 1px;
 }
