--- a/CSS/responsivo.css
+++ b/CSS/responsivo.css
@@ -70,11 +70,11 @@
 
     .bloco2{
         display: none;
-        flex: 50%;
+        /* flex: 50%;
         margin: 5%;
         text-align: center;
         height: 20px;
-        width: 10px;
+        width: 10px; */
     }
     
 
@@ -83,6 +83,8 @@
     }
 
     .produtos{
+        width: 100%;
+        height: 100%;
         /* margin-left: 10%;
         margin-right: 10%; */
     }
