--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
     padding: 10px 25px;
     border-radius: 8%;
     margin-right: 10px;
-    margin-left: 5%;
+    margin-left: 2px;
 }
 
 #entrar:hover{
@@ -77,7 +77,8 @@ body{
     display: flex;
     flex-flow: row wrap;
     /* border: #6b0700 solid 1px; */
-    padding-top: 100px;
+    padding-t
+    op: 100px;
     margin: 0% 2% 0% 2%;
     background-color: #f7f7f7;
     /* justify-content: center;
@@ -238,4 +239,53 @@ body{
     text-align: center;
     font-size: small;
     /* border:black solid 1px; */
+}
+
+
+/* pagina 2 */
+
+.body2{
+    background-color: aquamarine;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+.caixa1{
+    border: solid red 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 80vh;
+    box-shadow: 5px 5px 10px rgb(0, 0, 0.212) ;
+
+}
+
+.caixa2{
+    border: black solid 1px;
+    background-color: #4f5f44;
+    width: 50%;
+    height: 100%;
+}
+
+.caixa3{
+    border: black solid 1px;
+    width: 50%;
+    height: 100%;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+.forms{
+    /* text-align: center; */
+    /* margin-left: 2%; */
+    font-size: 15px;
+    text-align: left;
+    margin: 0 10% 0 10%;
+    padding: 2%;
+    border: black solid 1px;
+   
 }
