--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 
 
 .navbar{
-   background-color:#4f5f44;
+   background-color: #26332C;
    display: flex;
    flex-flow: wrap row;
    height: 100px;
@@ -77,10 +77,8 @@ body{
     display: flex;
     flex-flow: row wrap;
     /* border: #6b0700 solid 1px; */
-    padding-t
-    op: 100px;
     margin: 0% 2% 0% 2%;
-    background-color: #f7f7f7;
+    background-color:  #f7f7f7;
     /* justify-content: center;
     align-items: center; */
 }
@@ -147,9 +145,9 @@ body{
 }
 
 .produtos{
-    background-color: #4f5f44;
+    background-color: #26332C;
     color: #f7f7f7;
-    border: solid #4f5f44 5px;
+    border: solid #26332C 5px;
     /* margin-top: 1%; */
     padding: 0%;
     margin: 0% 2% 0% 2% ;
@@ -157,7 +155,7 @@ body{
 
 #fixo{
     /* border: solid white; */
-    background-color: #4f5f44;
+    background-color: #26332C;
     text-align: center;
     font-family: 'Dancing Script', cursive;
     font-family: 'Monoton', sans-serif;
@@ -245,33 +243,49 @@ body{
 /* pagina 2 */
 
 .body2{
-    background-color: aquamarine;
+    background-color: #26332C;
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
 .caixa1{
-    border: solid red 1px;
+    /* border: solid red 1px; */
     display: flex;
     justify-content: center;
     align-items: center;
     width: 80%;
     height: 80vh;
-    box-shadow: 5px 5px 10px rgb(0, 0, 0.212) ;
-
+    box-shadow: 5px 5px 1px rgb(0, 0, 0.212) ;
 }
 
 .caixa2{
     border: black solid 1px;
-    background-color: #4f5f44;
+    /* background-color: #4f5f44; */
     width: 50%;
+    height: 100%;
+    align-items: center;
+    text-align: center;
+}
+
+.logo2{
+    border: solid red 1px;
+    color: #f7f7f7;
+    justify-content: center;
+    align-items: center;
+}
+
+.imagem{
+    width: 100%;
     height: 100%;
 }
 
 .caixa3{
     border: black solid 1px;
+    background-color: #4f5f44;
+    /* display: flex; */
     width: 50%;
     height: 100%;
     align-items: center;
@@ -279,13 +293,68 @@ body{
     flex-direction: column;
 }
 
+.texto3{
+    font-size: 25px;
+    color: #f7f7f7;
+}
+
 .forms{
     /* text-align: center; */
     /* margin-left: 2%; */
+    color: #f7f7f7;
     font-size: 15px;
     text-align: left;
     margin: 0 10% 0 10%;
     padding: 2%;
     border: black solid 1px;
-   
+    margin-top: 50px;
+    box-shadow: 5px 5px 1px rgb(0, 0, 0.212) ;
+}
+
+.button{
+    margin-top: 60px;
+    background-color: #26332C;
+    color: #f7f7f7;
+    border-radius: 15%;
+    font-size: 100%;
+    padding: 0 2% 0 2%;
+}
+
+@media screen and (max-width: 1005px) {
+    .caixa1{
+       display: inline-table;
+       height: 100%;
+       margin-top: 20%;
+       margin-bottom: 10%;
+       box-shadow: none;
+    }
+
+    .imagem{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .caixa2{
+        display: inline-table;
+        width: 100%;
+        margin-top: 5%;
+    }
+
+    .caixa3{
+        width: 100%;
+        height: 100%;
+        margin-bottom: 5%;
+    }
+
+    .forms{
+        display: flex;
+        margin-top: 10%;
+    }
+
+    .button{
+        margin-bottom: 10%;
+    }
+
 }
