--- a/style.css
+++ b/style.css
@@ -301,6 +301,7 @@ body{
 .forms{
     /* text-align: center; */
     /* margin-left: 2%; */
+    /* background-color: #f7f7f7; */
     color: #f7f7f7;
     font-size: 15px;
     text-align: left;
@@ -313,11 +314,16 @@ body{
 
 .button{
     margin-top: 60px;
-    background-color: #26332C;
+    background-color: #6b0700 ;
     color: #f7f7f7;
     border-radius: 15%;
     font-size: 100%;
     padding: 0 2% 0 2%;
+}
+
+.input{
+    background-color: #f7f7f7;
+    color: black;
 }
 
 @media screen and (max-width: 1005px) {
@@ -331,6 +337,7 @@ body{
 
     .imagem{
         width: 100%;
+        height: 100%;
         margin-top: 20%;
         align-items: center;
         justify-content: center;
@@ -354,11 +361,12 @@ body{
         margin-top: 10%;
         padding: 2%;
         flex-direction: column;
-        
+
     }
 
     .button{
         margin-bottom: 10%;
+
     }
 
 }
